# pipeline-hub

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  world_class_data_pipeline_design.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run.py  run_8000.py  run_8001.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/alerting/: __init__.py  dispatcher.py  rules.py
backend/app/api/v1/: admin_partitions.py  api_keys.py  auth.py  crowd.py  dead_letters.py  inbound.py  ingest.py  internal.py  jobs.py  master_merge.py  pipelines.py  public.py  raw.py  security_events.py  sources.py  sql_studio.py  sse.py  users.py
backend/app/api/v2/: __init__.py  backfill.py  checklist.py  connectors.py  contracts.py  cutover.py  domains.py  dq_rules.py  dryrun.py  inbound_channels.py  load_policies.py  mappings.py  mart_drafts.py  mock_api.py  namespaces.py  onboarding.py  operations.py  perf.py  permissions.py  providers.py  public_router.py  resources.py  service_mart.py  sql_assets.py
backend/app/cli/: __init__.py  restore_partition.py
backend/app/core/: abuse_detector.py  access_log.py  errors.py  event_topics.py  events.py  hashing.py  hmac_verifier.py  logging.py  metrics.py  object_keys.py  rate_limit.py  request_context.py  security.py  sentry.py  sse.py
backend/app/db/: session.py  sync_session.py
backend/app/domain/: auth.py  cdc_merge.py  crawl.py  crowd_review.py  db_incremental.py  dq_gate.py  idempotent_consume.py  inbound_contracts.py  inbound_dispatch.py  ingest.py  mart_designer.py  master_merge.py  ocr.py  outbox.py  partition_archive.py  pipeline_release.py  pipeline_runtime.py  pipeline_schedule.py  price_fact.py  sql_studio.py  standardization.py  standardization_registry.py  std_alias.py  transform.py
backend/app/domain/functions/: __init__.py  registry.py
backend/app/domain/guardrails/: __init__.py  dry_run.py  mini_publish_checklist.py  publish_checklist.py  sql_guard.py  state_machine.py
backend/app/domain/nodes/: __init__.py  dedup.py  dq_check.py  load_master.py  notify.py  source_api.py  sql_transform.py
backend/app/domain/nodes_v2/: __init__.py  _v1_compat.py  cdc_event_fetch.py  crawl_fetch.py  crawler_result_ingest.py  db_incremental_fetch.py  file_upload_ingest.py  function_transform.py  http_transform.py  load_target.py  map_fields.py  ocr_result_ingest.py  ocr_transform.py  public_api_fetch.py  python_model_transform.py  sql_asset_transform.py  sql_inline_transform.py  standardize.py  webhook_ingest.py
backend/app/domain/perf_guards/: __init__.py  backfill.py  slo.py  sql_coach.py
backend/app/domain/permissions/: __init__.py  matrix.py
backend/app/domain/providers/: __init__.py  circuit_breaker.py  factory.py  shadow.py  worker_hook.py
backend/app/domain/public_api/: __init__.py  engine.py  parser.py  parsers.py  spec.py
backend/app/domain/public_v2/: __init__.py  scope.py
backend/app/domain/registry/: __init__.py  compatibility.py  loader.py  selector.py
backend/app/domain/v1_to_v2/: __init__.py  cutover.py  shadow_run.py  t0_checksum.py
backend/app/experimental/: __init__.py  registry_spike.py
backend/app/integrations/: __init__.py  object_storage.py  redis_pubsub_async.py  sqlglot_validator.py
backend/app/integrations/cdc/: __init__.py  wal2json_consumer.py
backend/app/integrations/clova/: __init__.py  client.py
backend/app/integrations/crawler/: __init__.py  httpx_spider.py  types.py
backend/app/integrations/hyperclova/: __init__.py  client.py
backend/app/integrations/ocr/: __init__.py  circuit_breaker.py  types.py
backend/app/integrations/sourcedb/: __init__.py  client.py  types.py
backend/app/integrations/upstage/: __init__.py  client.py
backend/app/models/: __init__.py  audit.py  base.py  crowd.py  ctl.py  domain.py  dq.py  mart.py  raw.py  run.py  stg.py  wf.py
backend/app/repositories/: crowd.py  dead_letters.py  pipelines.py  raw.py  sources.py  users.py
backend/app/schemas/: api_keys.py  auth.py  crowd.py  dead_letters.py  ingest.py  jobs.py  pipelines.py  raw_objects.py  sources.py  sql_studio.py  users.py
backend/app/workers/: __init__.py  alert_loop.py  cdc_consumer_worker.py  crawler_worker.py  db_incremental_worker.py  inbound_dispatcher.py  notify_worker.py  ocr_worker.py  outbox_publisher.py  pipeline_node_v2_worker.py  pipeline_node_worker.py  price_fact_worker.py  transform_worker.py
backend/tests/: conftest.py  test_clova_signed_request.py  test_health.py  test_httpx_spider.py  test_sentry_scrubbing.py  test_sqlglot_validator.py  test_sse_format.py
backend/tests/integration/: conftest.py  test_abuse_detector.py  test_airflow_trigger.py  test_auth.py  test_cdc_consumer.py  test_crawler.py  test_crowd_api.py  test_crowd_review.py  test_db_incremental.py  test_dead_letters_api.py  test_dlq.py  test_domain_registry.py  test_dq_gate.py  test_event_bus.py  test_guardrails.py  test_inbound_api_key.py  test_ingest.py  test_jobs.py  test_master_merge.py  test_metrics.py  test_nodes.py  test_nodes_v2.py  test_object_storage.py  test_ocr_pipeline.py  test_outbox_publisher.py  test_partition_archive.py  test_phase5_1_node_catalog.py  test_phase6_kamis_vertical_slice.py  test_phase6_public_api.py  test_phase8_5_real_workflow_run.py  test_phase8_6_scenario.py  test_phase8_full_e2e.py  test_pipeline_release.py  test_pipeline_runtime.py  test_pipeline_schedule.py  test_price_fact_pipeline.py  test_provider_registry.py  test_public_api.py  test_raw_objects.py  test_registry_spike.py  (+15 more)
backend/tests/perf/: README.md  test_sandbox_isolation.py  test_sse_latency.py
docs/: 00_PROJECT_CONTEXT.md  01_TECH_STACK.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_DOMAIN_MODEL.md  05_CONVENTIONS.md  06_DATA_FLOW.md  07_CORE_TECHNOLOGIES.md  DB_CLASSIFICATION.md  ENVIRONMENTS.md  HOW_TO_WORK_WITH_CLAUDE.md  README.md  inbound_channel_api_specs.md  kamis_demo_quickstart.md
domains/: agri.yaml  pos.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
(+303 files in other folders)
