[project]
name = "datapipeline-backend"
version = "0.1.0"
description = "Unified Data Pipeline Platform — FastAPI backend"
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # HTTP framework
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",

  # Settings / validation
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",

  # DB (ORM + Migration). 드라이버 분기는 ADR-0001 참조:
  #   - Docker 운영 (Python 3.12) = asyncpg (빠른 raw I/O)
  #   - 로컬 (Python 3.14)        = psycopg3 (binary wheel 안정)
  "sqlalchemy[asyncio]>=2.0.35,<2.1",
  "alembic>=1.13,<1.15",
  "asyncpg>=0.30; python_version < '3.14'",
  "psycopg[binary]>=3.2,<4",

  # HTTP client (async)
  "httpx>=0.27,<0.29",

  # Security
  "argon2-cffi>=23.1,<25",
  "python-jose[cryptography]>=3.3,<4",

  # Logging
  "structlog>=24.4,<25",

  # Observability
  "prometheus-client>=0.21,<0.22",

  # Cron 표현식 검증 (data_source.schedule_cron). Phase 2 Airflow 와는 무관 — 사용자 입력 검증용.
  "croniter>=2.0,<7",

  # Object Storage (MinIO 로컬 / NCP Object Storage 운영). S3 호환.
  # async 는 asyncio.to_thread 로 감쌈 (ADR-0002).
  "boto3>=1.34,<2",
]

[dependency-groups]
dev = [
  "ruff>=0.7,<0.9",
  "mypy>=1.11,<1.13",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<6",
  "httpx>=0.27,<0.29",
  "types-python-jose>=3.3,<4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "UP",              # pyupgrade
  "B",               # bugbear
  "ASYNC",           # async lint
  "SIM",             # simplify
  "RUF",             # ruff specific
]
ignore = [
  "E501",            # line length (line-length 이미 적용)
  "B008",            # FastAPI Depends() 허용
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
# SQLAlchemy 의 __table_args__ 는 mutable dict/tuple 형태가 표준.
"app/models/**/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false   # FastAPI route decorator용
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jose.*", "croniter.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
