[project]
name = "datapipeline-backend"
version = "0.1.0"
description = "Unified Data Pipeline Platform — FastAPI backend"
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # HTTP framework
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  # multipart/form-data 파싱 — /v1/ingest/{file,receipt} UploadFile 에 필수.
  "python-multipart>=0.0.17,<0.1",

  # Settings / validation
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",

  # DB (ORM + Migration). 드라이버 분기는 ADR-0001 참조:
  #   - Docker 운영 (Python 3.12) = asyncpg (빠른 raw I/O)
  #   - 로컬 (Python 3.14)        = psycopg3 (binary wheel 안정)
  "sqlalchemy[asyncio]>=2.0.35,<2.1",
  "alembic>=1.13,<1.15",
  "asyncpg>=0.30; python_version < '3.14'",
  "psycopg[binary]>=3.2,<4",

  # HTTP client (async)
  "httpx>=0.27,<0.29",

  # Security
  "argon2-cffi>=23.1,<25",
  "python-jose[cryptography]>=3.3,<4",

  # Logging
  "structlog>=24.4,<25",

  # Observability
  "prometheus-client>=0.21,<0.22",

  # Cron 표현식 검증 (data_source.schedule_cron). Phase 2 Airflow 와는 무관 — 사용자 입력 검증용.
  "croniter>=2.0,<7",

  # Object Storage (MinIO 로컬 / NCP Object Storage 운영). S3 호환.
  # async 는 asyncio.to_thread 로 감쌈 (ADR-0002).
  "boto3>=1.34,<2",

  # Worker / 메시지 브로커 (Phase 2.2.1~)
  # dramatiq[redis] 가 redis-py 를 가져오지만, app/core/events.py 의 직접 사용을 위해 명시.
  "dramatiq[redis]>=1.17,<2",
  "redis>=5.2,<7",

  # 임베딩 / 벡터 매칭 (Phase 2.2.5 표준화)
  # pgvector(서버) 는 migration 0012 에서 CREATE EXTENSION. 클라이언트 라이브러리만 의존.
  "pgvector>=0.3,<0.5",

  # DB-to-DB 증분 수집 (Phase 2.2.7) — 외부 MySQL 소스 지원.
  # PostgreSQL 은 이미 psycopg 의존. SQLAlchemy 가 dialect 자동 매칭.
  "pymysql>=1.1,<2",

  # Sentry (Phase 2.2.9) — 오류 자동 보고. DSN 비어 있으면 no-op.
  "sentry-sdk[fastapi]>=2.18,<3",

  # SQL 정적 분석 (Phase 3.2.2 SQL_TRANSFORM 노드 + 3.2.4 SQL Studio) —
  # AST 분석으로 schema 화이트리스트 + 위험 함수 차단.
  "sqlglot>=25,<27",

  # YAML 파싱 — Phase 3.2.8 docs/pipelines/*.yaml + docs/sql_templates/*/meta.yaml
  # seed 스크립트가 사용. PyYAML 은 상위 의존성으로 이미 설치되어 있을 수 있지만 명시.
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "ruff>=0.7,<0.9",
  "mypy>=1.11,<1.13",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<6",
  "httpx>=0.27,<0.29",
  "types-python-jose>=3.3,<4",
  "types-PyYAML>=6.0,<7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "UP",              # pyupgrade
  "B",               # bugbear
  "ASYNC",           # async lint
  "SIM",             # simplify
  "RUF",             # ruff specific
]
ignore = [
  "E501",            # line length (line-length 이미 적용)
  "B008",            # FastAPI Depends() 허용
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
# SQLAlchemy 의 __table_args__ 는 mutable dict/tuple 형태가 표준.
"app/models/**/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false   # FastAPI route decorator용
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jose.*", "croniter.*", "boto3.*", "botocore.*", "pgvector.*"]
ignore_missing_imports = true

# dramatiq: 타입 스텁이 일부만 제공되어 strict 모드와 충돌. 호출 자체는 우리가 책임.
[[tool.mypy.overrides]]
module = ["dramatiq.*"]
ignore_missing_imports = true
disallow_untyped_calls = false

# Worker 패키지는 dramatiq 표준 패턴(Generic Message/Actor 무인자)을 그대로 사용.
[[tool.mypy.overrides]]
module = ["app.workers.*"]
disallow_any_generics = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
